welcome.lessons.welcome.variables.Variables.scala.error
Variables:8: error: ')' expected but integer literal found.
while(porteBiscuit() nbPas!=0) {
                            ^Variables:16: error: illegal start of simple expression
	}
        ^